--- a/Section 3 - Securing Federated Learning.ipynb
+++ b/Section 3 - Securing Federated Learning.ipynb
@@ -35,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0731 06:09:13.055002  7712 secure_random.py:26] Falling back to insecure randomness since the required custom op could not be found for the installed version of TensorFlow. Fix this by compiling custom ops. Missing file was 'C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted/operations/secure_random/secure_random_module_tf_1.14.0.so'\n",
-      "W0731 06:09:13.079002  7712 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\session.py:26: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import syft as sy\n",
     "import torch as th\n",
@@ -58,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,32 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0731 06:09:14.056003  7712 base.py:628] Worker alice already exists. Replacing old worker which could cause                     unexpected behavior\n",
-      "W0731 06:09:14.064002  7712 base.py:628] Worker secure_worker already exists. Replacing old worker which could cause                     unexpected behavior\n",
-      "W0731 06:09:14.068003  7712 base.py:628] Worker bob already exists. Replacing old worker which could cause                     unexpected behavior\n",
-      "W0731 06:09:14.070003  7712 base.py:628] Worker secure_worker already exists. Replacing old worker which could cause                     unexpected behavior\n",
-      "W0731 06:09:14.072003  7712 base.py:628] Worker alice already exists. Replacing old worker which could cause                     unexpected behavior\n",
-      "W0731 06:09:14.073003  7712 base.py:628] Worker bob already exists. Replacing old worker which could cause                     unexpected behavior\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<VirtualWorker id:secure_worker #objects:0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bob.add_workers([alice, secure_worker])\n",
     "alice.add_workers([bob, secure_worker])\n",
@@ -105,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,26 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bob:tensor(0.0269) Alice:tensor(4.1252e-05)\n",
-      "Bob:tensor(0.0147) Alice:tensor(0.0007)\n",
-      "Bob:tensor(0.0096) Alice:tensor(0.0009)\n",
-      "Bob:tensor(0.0067) Alice:tensor(0.0009)\n",
-      "Bob:tensor(0.0049) Alice:tensor(0.0007)\n",
-      "Bob:tensor(0.0036) Alice:tensor(0.0006)\n",
-      "Bob:tensor(0.0027) Alice:tensor(0.0004)\n",
-      "Bob:tensor(0.0020) Alice:tensor(0.0003)\n",
-      "Bob:tensor(0.0015) Alice:tensor(0.0003)\n",
-      "Bob:tensor(0.0011) Alice:tensor(0.0002)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RUN THIS\n",
     "#iterate model\n",
@@ -290,20 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<VirtualWorker id:secure_worker #objects:0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cleared the secure worker\n",
     "secure_worker.clear_objects()"
@@ -324,20 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n1.create method accepting two input parameters\\na. number to be encrypted\\nb. number of shares to be split into and returns a tuple of shares\\nencrypt()\\n\\n2. create method called decrypt accepts input\\na. typle of shares\\ndecrypt()\\n\\n3.\\n\\n'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "1.create method accepting two input parameters\n",
@@ -491,11 +418,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_share = (2,5,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q = 23740629843760239486723"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encrypt(x, n_shares=3):\n",
+    "\n",
+    "    shares = list()\n",
+    "\n",
+    "    for i in range(n_shares - 1):\n",
+    "        shares.append(random.randint(0,Q))\n",
+    "    \n",
+    "    final_share = Q - (sum(shares) % Q ) + x\n",
+    "    \n",
+    "    shares.append(final_share)\n",
+    "    \n",
+    "    return tuple(shares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22437207974265995488936,\n",
+       " 13823686388148199739554,\n",
+       " 52058588235949360260,\n",
+       " 22038603714836678052036,\n",
+       " 23534829520694024724666,\n",
+       " 16617163623159653985492,\n",
+       " 17337438056238291834088,\n",
+       " 14871515807781464575351,\n",
+       " 17706126018100400588483,\n",
+       " 17765779214861018058200)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SKIP  - test encryption function - encrypt number using additive sharing \n",
+    "encrypt(5, n_shares=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# decrypt number\n",
+    "\n",
+    "def decrypt(shares):\n",
+    "    return sum(shares) % Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SKIP results = 5\n",
+    "decrypt(encrypt(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3260490783884457045211, 973698047409852316840, 19506441012465930124675)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#results of encryption look like this:\n",
+    "#(5609772530528069781446, 16398268908967744854894, 1732588404264424850386)\n",
+    "shares = encrypt(3)\n",
+    "shares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#result 3\n",
+    "decrypt(shares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# additive encryption\n",
+    "def add(a, b):    \n",
+    "        c = list()\n",
+    "       # assert(len(a) == len(b))\n",
+    "        \n",
+    "        for i in range(len(a)):\n",
+    "            c.append((a[i] + b[i]) % Q)            \n",
+    "        return tuple(c)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#skip decrypt(add(encrypt(5), encrypt(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# result = 12\n",
+    "x = encrypt(5)\n",
+    "y = encrypt(7)\n",
+    "z = add(x,y)\n",
+    "decrypt(z)"
    ]
   },
   {
