Began Encrypted Deep Learning

--- a/Section 3 - Securing Federated Learning.ipynb
+++ b/Section 3 - Securing Federated Learning.ipynb
@@ -1299,7 +1299,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1st project - federated learning with trusted aggregator\n",
+    "# neural network - with 3 data owners \n",
+    "# no one seees other gradients other than own - encrypt gradients\n",
+    "#secret sharing - replace trusted 3rd party with encryption protocol\n",
+    "# x = x.share(bob, alice, secure_worker)\n",
+    "# aggregrated learning - average gradients without anyone seeing it"
+   ]
   },
   {
    "cell_type": "code",
