--- a/Section 4b - Encrypted Keras Client.ipynb
+++ b/Section 4b - Encrypted Keras Client.ipynb
@@ -15,7 +15,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0821 05:07:59.782008  3380 secure_random.py:26] Falling back to insecure randomness since the required custom op could not be found for the installed version of TensorFlow. Fix this by compiling custom ops. Missing file was 'C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted/operations/secure_random/secure_random_module_tf_1.14.0.so'\n",
+      "W0821 05:07:59.802008  3380 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\session.py:26: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -66,7 +77,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tf_encrypted:Starting session on target 'grpc://localhost:4000' using config graph_options {\n",
+      "W0821 05:08:25.656008  3380 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\tensor\\native.py:403: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W0821 05:08:25.683007  3380 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\config.py:300: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "\n",
+      "W0821 05:08:25.685008  3380 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\config.py:87: The name tf.GraphOptions is deprecated. Please use tf.compat.v1.GraphOptions instead.\n",
+      "\n",
+      "I0821 05:08:25.687007  3380 session.py:55] Starting session on target 'grpc://localhost:4000' using config graph_options {\n",
       "}\n",
       "\n"
      ]
@@ -95,19 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The image had label 7 and was correctly classified as 7\n",
-      "The image had label 2 and was correctly classified as 2\n",
-      "The image had label 1 and was correctly classified as 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for image, expected_label in zip(images, expected_labels):\n",
     "\n",
@@ -144,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
